// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Information /> component tests should match default snapshot 1`] = `
<section
  className="information"
>
  <button
    className="information-toggle"
    onClick={[Function]}
    type="button"
  >
    <span>
      Copyrighted Material
    </span>
     | 
    <span
      className="learn-more"
    >
      <span>
        Learn More
      </span>
    </span>
    <svg
      className="icon"
    >
      <use
        xlinkHref="/static/svglist.svg#arrow_down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <div
    aria-hidden={true}
    className="rah-static rah-static--height-zero"
    style={
      Object {
        "height": 0,
        "overflow": "hidden",
      }
    }
  >
    <div
      style={Object {}}
    >
      <div
        className="copyrights-section"
        style={
          Object {
            "maxHeight": 0,
          }
        }
      >
        <div
          className="ot-copyright"
        >
          <div
            className="cp-section"
          >
            <h3>
              <span>
                This Bible audio is brought to you by:
              </span>
            </h3>
            <a
              href="http://www.fcbh.org"
              rel="noopener"
              target="_blank"
            >
              <img
                alt="Copyright owners logo: Faith Comes By Hearing"
                className="image-landscape fcbh-copyright-logo"
                src="https://bible.cloud/images/logo/FCBH_Color.svg"
              />
            </a>
            <p>
              <span>
                Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
              </span>
              <br />
              <span>
                English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
              </span>
              <br />
              <span>
                Audio: ℗ 2009 Hosanna
              </span>
              <br />
            </p>
          </div>
          <div
            className="cp-section"
          >
            <h3>
              <span>
                This Bible text is brought to you by:
              </span>
            </h3>
            <a
              href="https://www.crossway.org"
              rel="noopener"
              target="_blank"
            >
              <img
                alt="Copyright owners logo: Crossway"
                className="image-landscape"
                src="https://images.bible.cloud/logo/crossway.svg"
              />
            </a>
            <h3>
              <span>
                This Bible text is brought to you by:
              </span>
            </h3>
            <a
              className="org-name"
              href={null}
              rel="noopener"
              target="_blank"
            >
              Good News Publishers
            </a>
            <p>
              <span>
                The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
              </span>
              <br />
              <span>
                English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
              </span>
              <br />
            </p>
          </div>
        </div>
        <div
          className="nt-copyright"
        >
          <div
            className="cp-section"
          >
            <h3>
              <span>
                This Bible audio is brought to you by:
              </span>
            </h3>
            <a
              href="http://www.fcbh.org"
              rel="noopener"
              target="_blank"
            >
              <img
                alt="Copyright owners logo: Faith Comes By Hearing"
                className="image-landscape fcbh-copyright-logo"
                src="https://bible.cloud/images/logo/FCBH_Color.svg"
              />
            </a>
            <p>
              <span>
                Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
              </span>
              <br />
              <span>
                English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
              </span>
              <br />
              <span>
                Audio: ℗ 2009 Hosanna
              </span>
              <br />
            </p>
          </div>
          <div
            className="cp-section"
          >
            <h3>
              <span>
                This Bible text is brought to you by:
              </span>
            </h3>
            <a
              href="https://www.crossway.org"
              rel="noopener"
              target="_blank"
            >
              <img
                alt="Copyright owners logo: Crossway"
                className="image-landscape"
                src="https://images.bible.cloud/logo/crossway.svg"
              />
            </a>
            <h3>
              <span>
                This Bible text is brought to you by:
              </span>
            </h3>
            <a
              className="org-name"
              href={null}
              rel="noopener"
              target="_blank"
            >
              Good News Publishers
            </a>
            <p>
              <span>
                The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
              </span>
              <br />
              <span>
                English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
              </span>
              <br />
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ministry-statement"
  >
    <div
      className="ministry-tagline"
    >
      <span>
        ©
      </span>
       
      <a
        href="http://www.bible.is"
        rel="noopener"
        target="_blank"
      >
        <span>
          Bible.is
        </span>
      </a>
      <span>
        , a ministry of
      </span>
       
      <a
        href="https://www.faithcomesbyhearing.com"
        rel="noopener"
        target="_blank"
      >
        <span>
          Faith Comes By Hearing
        </span>
      </a>
       
      <span>
        ®.
      </span>
       
    </div>
    <div
      className="ministry-terms-support"
    >
      <a
        href="/terms"
        id="terms-of-service"
        onClick={[Function]}
      >
        <span>
          Terms and Conditions
        </span>
      </a>
        |  
      <a
        href="https://support.bible.is/contact"
        id="help-support"
        rel="noopener"
        target="_blank"
      >
        <span>
          Help & Support
        </span>
      </a>
    </div>
  </div>
</section>
`;

exports[`<Information /> component tests should match snapshot with copyrights missing information 1`] = `
<section
  className="information"
>
  <button
    className="information-toggle"
    onClick={[Function]}
    type="button"
  >
    <span>
      Copyrighted Material
    </span>
     | 
    <span
      className="learn-more"
    >
      <span>
        Learn More
      </span>
    </span>
    <svg
      className="icon"
    >
      <use
        xlinkHref="/static/svglist.svg#arrow_down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <div
    aria-hidden={true}
    className="rah-static rah-static--height-zero"
    style={
      Object {
        "height": 0,
        "overflow": "hidden",
      }
    }
  >
    <div
      style={Object {}}
    >
      <div
        className="copyrights-section"
        style={
          Object {
            "maxHeight": 0,
          }
        }
      >
        <div
          className="ot-copyright"
        >
          <div
            className="cp-section"
          >
            <p>
              <span>
                Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
              </span>
              <br />
              <span>
                English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
              </span>
              <br />
              <span>
                Audio: ℗ 2009 Hosanna
              </span>
              <br />
            </p>
          </div>
          <div
            className="cp-section"
          >
            <p>
              <span>
                The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
              </span>
              <br />
              <span>
                English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
              </span>
              <br />
            </p>
          </div>
        </div>
        <div
          className="nt-copyright"
        >
          <div
            className="cp-section"
          >
            <p>
              <span>
                Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
              </span>
              <br />
              <span>
                English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
              </span>
              <br />
              <span>
                Audio: ℗ 2009 Hosanna
              </span>
              <br />
            </p>
          </div>
          <div
            className="cp-section"
          >
            <p>
              <span>
                The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
              </span>
              <br />
              <span>
                English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
              </span>
              <br />
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ministry-statement"
  >
    <div
      className="ministry-tagline"
    >
      <span>
        ©
      </span>
       
      <a
        href="http://www.bible.is"
        rel="noopener"
        target="_blank"
      >
        <span>
          Bible.is
        </span>
      </a>
      <span>
        , a ministry of
      </span>
       
      <a
        href="https://www.faithcomesbyhearing.com"
        rel="noopener"
        target="_blank"
      >
        <span>
          Faith Comes By Hearing
        </span>
      </a>
       
      <span>
        ®.
      </span>
       
    </div>
    <div
      className="ministry-terms-support"
    >
      <a
        href="/terms"
        id="terms-of-service"
        onClick={[Function]}
      >
        <span>
          Terms and Conditions
        </span>
      </a>
        |  
      <a
        href="https://support.bible.is/contact"
        id="help-support"
        rel="noopener"
        target="_blank"
      >
        <span>
          Help & Support
        </span>
      </a>
    </div>
  </div>
</section>
`;

exports[`<Information /> component tests should match snapshot with copyrights missing organizations 1`] = `
<section
  className="information"
>
  <button
    className="information-toggle"
    onClick={[Function]}
    type="button"
  >
    <span>
      Copyrighted Material
    </span>
     | 
    <span
      className="learn-more"
    >
      <span>
        Learn More
      </span>
    </span>
    <svg
      className="icon"
    >
      <use
        xlinkHref="/static/svglist.svg#arrow_down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <div
    aria-hidden={true}
    className="rah-static rah-static--height-zero"
    style={
      Object {
        "height": 0,
        "overflow": "hidden",
      }
    }
  >
    <div
      style={Object {}}
    >
      <div
        className="copyrights-section"
        style={
          Object {
            "maxHeight": 0,
          }
        }
      >
        <div
          className="ot-copyright"
        >
          <div
            className="cp-section"
          >
            <h3>
              <span>
                This Bible audio is brought to you by:
              </span>
            </h3>
            <a
              href="https://www.crossway.org"
              rel="noopener"
              target="_blank"
            >
              <img
                alt="Copyright owners logo: Crossway"
                className="image-landscape fcbh-copyright-logo"
                src="https://images.bible.cloud/logo/crossway.svg"
              />
            </a>
            <h3>
              <span>
                This Bible audio is brought to you by:
              </span>
            </h3>
            <a
              className="org-name"
              href={null}
              rel="noopener"
              target="_blank"
            >
              Good News Publishers
            </a>
          </div>
          <div
            className="cp-section"
          >
            <h3>
              <span>
                This Bible text is brought to you by:
              </span>
            </h3>
            <a
              href="https://www.crossway.org"
              rel="noopener"
              target="_blank"
            >
              <img
                alt="Copyright owners logo: Crossway"
                className="image-landscape"
                src="https://images.bible.cloud/logo/crossway.svg"
              />
            </a>
            <h3>
              <span>
                This Bible text is brought to you by:
              </span>
            </h3>
            <a
              className="org-name"
              href={null}
              rel="noopener"
              target="_blank"
            >
              Good News Publishers
            </a>
          </div>
        </div>
        <div
          className="nt-copyright"
        >
          <div
            className="cp-section"
          >
            <h3>
              <span>
                This Bible audio is brought to you by:
              </span>
            </h3>
            <a
              href="https://www.crossway.org"
              rel="noopener"
              target="_blank"
            >
              <img
                alt="Copyright owners logo: Crossway"
                className="image-landscape fcbh-copyright-logo"
                src="https://images.bible.cloud/logo/crossway.svg"
              />
            </a>
            <h3>
              <span>
                This Bible audio is brought to you by:
              </span>
            </h3>
            <a
              className="org-name"
              href={null}
              rel="noopener"
              target="_blank"
            >
              Good News Publishers
            </a>
          </div>
          <div
            className="cp-section"
          >
            <h3>
              <span>
                This Bible text is brought to you by:
              </span>
            </h3>
            <a
              href="https://www.crossway.org"
              rel="noopener"
              target="_blank"
            >
              <img
                alt="Copyright owners logo: Crossway"
                className="image-landscape"
                src="https://images.bible.cloud/logo/crossway.svg"
              />
            </a>
            <h3>
              <span>
                This Bible text is brought to you by:
              </span>
            </h3>
            <a
              className="org-name"
              href={null}
              rel="noopener"
              target="_blank"
            >
              Good News Publishers
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ministry-statement"
  >
    <div
      className="ministry-tagline"
    >
      <span>
        ©
      </span>
       
      <a
        href="http://www.bible.is"
        rel="noopener"
        target="_blank"
      >
        <span>
          Bible.is
        </span>
      </a>
      <span>
        , a ministry of
      </span>
       
      <a
        href="https://www.faithcomesbyhearing.com"
        rel="noopener"
        target="_blank"
      >
        <span>
          Faith Comes By Hearing
        </span>
      </a>
       
      <span>
        ®.
      </span>
       
    </div>
    <div
      className="ministry-terms-support"
    >
      <a
        href="/terms"
        id="terms-of-service"
        onClick={[Function]}
      >
        <span>
          Terms and Conditions
        </span>
      </a>
        |  
      <a
        href="https://support.bible.is/contact"
        id="help-support"
        rel="noopener"
        target="_blank"
      >
        <span>
          Help & Support
        </span>
      </a>
    </div>
  </div>
</section>
`;
